tests/Fixtures/router/pages/error/405.php
<?php

declare(strict_types=1);

echo 'Method Not Allowed';
